# GameEngine_Jinx

./: Actor.cpp  Actor.h  AudioHelper.h  AudioManager.h  CMakeLists.txt  ComponentManager.h  EngineUtils.h  EventBus.h  Helper.h  Input.h  IntroRunner.h  LuaMananger.h  Makefile  Makefile_Backup.txt  README.md  Raycast.h  Renderer.h  Rigidbody.h  Scene.h  Script_Final_Feature.txt\  WebMakefile_Backup.txt  custom_feature_milestone_script.txt  dark_shell.html  fix_frameworks.sh  game_engine.sln  game_engine.vcxproj  game_engine.vcxproj.filters  game_engine_web.data  game_engine_web.html  game_engine_web.js  game_engine_web.wasm  interactive_shell.html  main.cpp  minimal_shell.html  package-lock.json  package.json  retro_shell.html  server.js  setup_and_build.sh  switch_and_build.sh
Lua/: Makefile  liblua.wasm
LuaBridge/detail/: FuncTraits.h
SDL2.framework/Versions/A/: SDL2
SDL2.framework/Versions/A/_CodeSignature/: CodeResources
SDL2_image.framework/Versions/A/: SDL2_image
SDL2_mixer.framework/Versions/A/: SDL2_mixer
SDL2_ttf.framework/Versions/A/: SDL2_ttf
box2d/: b2_contact.cpp  b2_contact_solver.cpp  b2_world.cpp
box2d/include/box2d/: b2_math.h
emcc_test/: a.out.js  a.out.wasm  hello.js  hello.wasm
game_engine.xcodeproj/: project.pbxproj
game_engine.xcodeproj/xcshareddata/xcschemes/: game_engine.xcscheme
resources/: game.config  rendering.config
resources/component_types/: BouncyBox.lua  GameManager.lua  Hud.lua  KeyboardControls.lua  SpriteRenderer.lua  VictoryBox.lua
resources/scenes/: basic.scene
(+3 files in other folders)
